# tardy-pyutils

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/tardy_pyutils/data/: __init__.py  polars.py
tests/: packaging_test.py
