[project]
name = "tardy-pyutils"
version = "0.1.1"
description = "Simple python utilities that I use again and again and prefer to keep in a single package"
readme = "README.md"
requires-python = ">=3.11"
license-files = ["LICENSE.md"]
authors = [{ name = "rachee", email = "git@rachee.dev" }]
dependencies = ["polars>=1.36.1"]

# [tool.uv.build-backend]
# module-name = ["data"]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
